trying to make slider reach the ends

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
 input[type="text"],
 input[type="range"] {
     width: 100%;
-    padding: 10px;
+    padding: 0;
     margin: 10px 0;
     border: 1px solid #ddd;
     border-radius: 5px;
